# 0.00.02 (57653) Oct 14, 2011
Added spinner control for fraction
Added toolbox for multiple representations
# 0.00.01 (57365) Oct 6, 2011